--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -5,43 +5,47 @@ metadata:
   labels:
     local-testing: "true"
   annotations:
-    api-approved.kubernetes.io: "unapproved, temporarily squatting"
+    "api-approved.kubernetes.io": "unapproved, legacy API"
 spec:
   group: cluster.k8s.io
   scope: Namespaced
   names:
     kind: Machine
     plural: machines
+    singular: machine
+    listKind: MachineList
+    shortNames: ["ma"]
   versions:
     - name: v1alpha1
       served: true
       storage: true
       schema:
         openAPIV3Schema:
+          x-kubernetes-preserve-unknown-fields: true
           type: object
-          properties:
-            spec:
-              type: object
-              x-kubernetes-preserve-unknown-fields: true
-            status:
-              type: object
-              x-kubernetes-preserve-unknown-fields: true
-      subresources:
-        # status enables the status subresource.
-        status: {}
       additionalPrinterColumns:
-      - name: Provider
-        type: string
-        jsonPath: .spec.providerSpec.value.cloudProvider
-      - name: OS
-        type: string
-        jsonPath: .spec.providerSpec.value.operatingSystem
-      - name: Address
-        type: string
-        jsonPath: .status.addresses[0].address
-      - name: Age
-        type: date
-        jsonPath: .metadata.creationTimestamp
+        - name: Provider
+          type: string
+          jsonPath: .spec.providerSpec.value.cloudProvider
+        - name: OS
+          type: string
+          jsonPath: .spec.providerSpec.value.operatingSystem
+        - name: Node
+          type: string
+          jsonPath: .status.nodeRef.name
+        - name: Kubelet
+          type: string
+          jsonPath: .spec.versions.kubelet
+        - name: Address
+          type: string
+          jsonPath: .status.addresses[0].address
+        - name: Age
+          type: date
+          jsonPath: .metadata.creationTimestamp
+        - name: Deleted
+          type: date
+          jsonPath: .metadata.deletionTimestamp
+          priority: 1
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -50,43 +54,52 @@ metadata:
   labels:
     local-testing: "true"
   annotations:
-    api-approved.kubernetes.io: "unapproved, temporarily squatting"
+    "api-approved.kubernetes.io": "unapproved, legacy API"
 spec:
   group: cluster.k8s.io
   scope: Namespaced
   names:
     kind: MachineSet
     plural: machinesets
+    singular: machineset
+    listKind: MachineSetList
+    shortNames: ["ms"]
   versions:
     - name: v1alpha1
       served: true
       storage: true
       schema:
         openAPIV3Schema:
+          x-kubernetes-preserve-unknown-fields: true
           type: object
-          properties:
-            spec:
-              type: object
-              x-kubernetes-preserve-unknown-fields: true
-            status:
-              type: object
-              x-kubernetes-preserve-unknown-fields: true
       subresources:
-        # status enables the status subresource.
         status: {}
       additionalPrinterColumns:
-      - name: Replicas
-        type: integer
-        jsonPath: .spec.replicas
-      - name: Provider
-        type: string
-        jsonPath: .spec.template.spec.providerSpec.value.cloudProvider
-      - name: OS
-        type: string
-        jsonPath: .spec.template.spec.providerSpec.value.operatingSystem
-      - name: Age
-        type: date
-        jsonPath: .metadata.creationTimestamp
+        - name: Replicas
+          type: integer
+          jsonPath: .spec.replicas
+        - name: Available-Replicas
+          type: integer
+          jsonPath: .status.availableReplicas
+        - name: Provider
+          type: string
+          jsonPath: .spec.template.spec.providerSpec.value.cloudProvider
+        - name: OS
+          type: string
+          jsonPath: .spec.template.spec.providerSpec.value.operatingSystem
+        - name: MachineDeployment
+          type: string
+          jsonPath: .metadata.ownerReferences[0].name
+        - name: Kubelet
+          type: string
+          jsonPath: .spec.template.spec.versions.kubelet
+        - name: Age
+          type: date
+          jsonPath: .metadata.creationTimestamp
+        - name: Deleted
+          type: date
+          jsonPath: .metadata.deletionTimestamp
+          priority: 1
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -95,43 +108,52 @@ metadata:
   labels:
     local-testing: "true"
   annotations:
-    api-approved.kubernetes.io: "unapproved, temporarily squatting"
+    "api-approved.kubernetes.io": "unapproved, legacy API"
 spec:
   group: cluster.k8s.io
   scope: Namespaced
   names:
     kind: MachineDeployment
     plural: machinedeployments
+    singular: machinedeployment
+    listKind: MachineDeploymentList
+    shortNames: ["md"]
   versions:
     - name: v1alpha1
       served: true
       storage: true
       schema:
         openAPIV3Schema:
+          x-kubernetes-preserve-unknown-fields: true
           type: object
-          properties:
-            spec:
-              type: object
-              x-kubernetes-preserve-unknown-fields: true
-            status:
-              type: object
-              x-kubernetes-preserve-unknown-fields: true
       subresources:
-        # status enables the status subresource.
+        scale:
+          specReplicasPath: .spec.replicas
+          statusReplicasPath: .status.replicas
         status: {}
       additionalPrinterColumns:
-      - name: Replicas
-        type: integer
-        jsonPath: .spec.replicas
-      - name: Provider
-        type: string
-        jsonPath: .spec.template.spec.providerSpec.value.cloudProvider
-      - name: OS
-        type: string
-        jsonPath: .spec.template.spec.providerSpec.value.operatingSystem
-      - name: Age
-        type: date
-        jsonPath: .metadata.creationTimestamp
+        - name: Replicas
+          type: integer
+          jsonPath: .spec.replicas
+        - name: Available-Replicas
+          type: integer
+          jsonPath: .status.availableReplicas
+        - name: Provider
+          type: string
+          jsonPath: .spec.template.spec.providerSpec.value.cloudProvider
+        - name: OS
+          type: string
+          jsonPath: .spec.template.spec.providerSpec.value.operatingSystem
+        - name: Kubelet
+          type: string
+          jsonPath: .spec.template.spec.versions.kubelet
+        - name: Age
+          type: date
+          jsonPath: .metadata.creationTimestamp
+        - name: Deleted
+          type: date
+          jsonPath: .metadata.deletionTimestamp
+          priority: 1
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -140,7 +162,7 @@ metadata:
   labels:
     local-testing: "true"
   annotations:
-    api-approved.kubernetes.io: "unapproved, temporarily squatting"
+    "api-approved.kubernetes.io": "unapproved, legacy API"
 spec:
   group: cluster.k8s.io
   scope: Namespaced
@@ -153,14 +175,8 @@ spec:
       storage: true
       schema:
         openAPIV3Schema:
+          x-kubernetes-preserve-unknown-fields: true
           type: object
-          properties:
-            spec:
-              type: object
-              x-kubernetes-preserve-unknown-fields: true
-            status:
-              type: object
-              x-kubernetes-preserve-unknown-fields: true
       subresources:
         # status enables the status subresource.
         status: {}
