--- a/test/e2e/provisioning/testdata/machinedeployment-kubevirt-dns-config.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-kubevirt-dns-config.yaml
@@ -26,9 +26,9 @@ spec:
             - "<< YOUR_PUBLIC_KEY >>"
           cloudProvider: "kubevirt"
           cloudProviderSpec:
-            storageClassName: kubermatic-fast
+            storageClassName: local-path
             pvcSize: "10Gi"
-            sourceURL: http://10.102.236.197/<< OS_NAME >>.img
+            sourceURL: http://10.107.208.71/<< OS_NAME >>.img
             cpus: "1"
             memory: "4096M"
             dnsPolicy: "None"
