--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -1,107 +1,185 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: machines.cluster.k8s.io
   labels:
     local-testing: "true"
+  annotations:
+    "api-approved.kubernetes.io": "unapproved, legacy API"
 spec:
   group: cluster.k8s.io
-  version: v1alpha1
   scope: Namespaced
   names:
     kind: Machine
     plural: machines
-  additionalPrinterColumns:
-  - name: Provider
-    type: string
-    JSONPath: .spec.providerSpec.value.cloudProvider
-  - name: OS
-    type: string
-    JSONPath: .spec.providerSpec.value.operatingSystem
-  - name: Address
-    type: string
-    JSONPath: .status.addresses[0].address
-  - name: Age
-    type: date
-    JSONPath: .metadata.creationTimestamp
-
+    singular: machine
+    listKind: MachineList
+    shortNames: ["ma"]
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          x-kubernetes-preserve-unknown-fields: true
+          type: object
+      additionalPrinterColumns:
+        - name: Provider
+          type: string
+          jsonPath: .spec.providerSpec.value.cloudProvider
+        - name: OS
+          type: string
+          jsonPath: .spec.providerSpec.value.operatingSystem
+        - name: Node
+          type: string
+          jsonPath: .status.nodeRef.name
+        - name: Kubelet
+          type: string
+          jsonPath: .spec.versions.kubelet
+        - name: Address
+          type: string
+          jsonPath: .status.addresses[0].address
+        - name: Age
+          type: date
+          jsonPath: .metadata.creationTimestamp
+        - name: Deleted
+          type: date
+          jsonPath: .metadata.deletionTimestamp
+          priority: 1
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: machinesets.cluster.k8s.io
   labels:
     local-testing: "true"
+  annotations:
+    "api-approved.kubernetes.io": "unapproved, legacy API"
 spec:
   group: cluster.k8s.io
-  version: v1alpha1
   scope: Namespaced
   names:
     kind: MachineSet
     plural: machinesets
-  subresources:
-     # status enables the status subresource.
-     status: {}
-  additionalPrinterColumns:
-  - name: Replicas
-    type: integer
-    JSONPath: .spec.replicas
-  - name: Provider
-    type: string
-    JSONPath: .spec.template.spec.providerSpec.value.cloudProvider
-  - name: OS
-    type: string
-    JSONPath: .spec.template.spec.providerSpec.value.operatingSystem
-  - name: Age
-    type: date
-    JSONPath: .metadata.creationTimestamp
+    singular: machineset
+    listKind: MachineSetList
+    shortNames: ["ms"]
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          x-kubernetes-preserve-unknown-fields: true
+          type: object
+      subresources:
+        status: {}
+      additionalPrinterColumns:
+        - name: Replicas
+          type: integer
+          jsonPath: .spec.replicas
+        - name: Available-Replicas
+          type: integer
+          jsonPath: .status.availableReplicas
+        - name: Provider
+          type: string
+          jsonPath: .spec.template.spec.providerSpec.value.cloudProvider
+        - name: OS
+          type: string
+          jsonPath: .spec.template.spec.providerSpec.value.operatingSystem
+        - name: MachineDeployment
+          type: string
+          jsonPath: .metadata.ownerReferences[0].name
+        - name: Kubelet
+          type: string
+          jsonPath: .spec.template.spec.versions.kubelet
+        - name: Age
+          type: date
+          jsonPath: .metadata.creationTimestamp
+        - name: Deleted
+          type: date
+          jsonPath: .metadata.deletionTimestamp
+          priority: 1
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: machinedeployments.cluster.k8s.io
   labels:
     local-testing: "true"
+  annotations:
+    "api-approved.kubernetes.io": "unapproved, legacy API"
 spec:
   group: cluster.k8s.io
-  version: v1alpha1
   scope: Namespaced
   names:
     kind: MachineDeployment
     plural: machinedeployments
-  subresources:
-     # status enables the status subresource.
-     status: {}
-  additionalPrinterColumns:
-  - name: Replicas
-    type: integer
-    JSONPath: .spec.replicas
-  - name: Provider
-    type: string
-    JSONPath: .spec.template.spec.providerSpec.value.cloudProvider
-  - name: OS
-    type: string
-    JSONPath: .spec.template.spec.providerSpec.value.operatingSystem
-  - name: Age
-    type: date
-    JSONPath: .metadata.creationTimestamp
+    singular: machinedeployment
+    listKind: MachineDeploymentList
+    shortNames: ["md"]
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          x-kubernetes-preserve-unknown-fields: true
+          type: object
+      subresources:
+        scale:
+          specReplicasPath: .spec.replicas
+          statusReplicasPath: .status.replicas
+        status: {}
+      additionalPrinterColumns:
+        - name: Replicas
+          type: integer
+          jsonPath: .spec.replicas
+        - name: Available-Replicas
+          type: integer
+          jsonPath: .status.availableReplicas
+        - name: Provider
+          type: string
+          jsonPath: .spec.template.spec.providerSpec.value.cloudProvider
+        - name: OS
+          type: string
+          jsonPath: .spec.template.spec.providerSpec.value.operatingSystem
+        - name: Kubelet
+          type: string
+          jsonPath: .spec.template.spec.versions.kubelet
+        - name: Age
+          type: date
+          jsonPath: .metadata.creationTimestamp
+        - name: Deleted
+          type: date
+          jsonPath: .metadata.deletionTimestamp
+          priority: 1
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: clusters.cluster.k8s.io
   labels:
     local-testing: "true"
+  annotations:
+    "api-approved.kubernetes.io": "unapproved, legacy API"
 spec:
   group: cluster.k8s.io
-  version: v1alpha1
   scope: Namespaced
   names:
     kind: Cluster
     plural: clusters
-  subresources:
-     # status enables the status subresource.
-     status: {}
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          x-kubernetes-preserve-unknown-fields: true
+          type: object
+      subresources:
+        # status enables the status subresource.
+        status: {}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
