--- a/.prow.yaml
+++ b/.prow.yaml
@@ -564,6 +564,29 @@ presubmits:
             requests:
               memory: 1Gi
               cpu: 500m
+  
+  - name: pull-machine-controller-e2e-nutanix
+    optional: true
+    run_if_changed: pkg\/cloudprovider\/provider\/nutanix\/.*
+    decorate: true
+    error_on_eviction: true
+    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-hetzner: "true"
+      preset-e2e-ssh: "true"
+      preset-nutanix: "true"
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: golang:1.17.1
+          command:
+            - "./hack/ci-e2e-test.sh"
+          args:
+            - "TestNutanixProvisioningE2E"
+          resources:
+            requests:
+              memory: 1Gi
+              cpu: 500m
 
   - name: pull-machine-controller-e2e-anexia
     always_run: false
