--- a/pkg/userdata/ubuntu/testdata/containerd.yaml
+++ b/pkg/userdata/ubuntu/testdata/containerd.yaml
@@ -364,6 +364,16 @@ write_files:
     [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
     [plugins."io.containerd.grpc.v1.cri".registry.mirrors."docker.io"]
     endpoint = ["https://registry-1.docker.io"]
+    [plugins."io.containerd.grpc.v1.cri".registry.mirrors."k8s.gcr.io"]
+    endpoint = ["https://intranet.local"]
+    [plugins."io.containerd.grpc.v1.cri".registry.configs]
+    [plugins."io.containerd.grpc.v1.cri".registry.configs."docker.io"]
+    [plugins."io.containerd.grpc.v1.cri".registry.configs."docker.io".auth]
+    username = "login1"
+    password = "passwd1"
+    [plugins."io.containerd.grpc.v1.cri".registry.configs."k8s.gcr.io"]
+    [plugins."io.containerd.grpc.v1.cri".registry.configs."k8s.gcr.io".tls]
+    insecure_skip_verify = true
 
 
 - path: "/etc/kubernetes/kubelet.conf"
