--- a/pkg/userdata/rockylinux/testdata/kubelet-v1.21-nutanix.yaml
+++ b/pkg/userdata/rockylinux/testdata/kubelet-v1.21-nutanix.yaml
@@ -82,6 +82,7 @@ write_files:
       socat \
       wget \
       curl \
+      tar \
       iscsi-initiator-utils \
       ipvsadm
     systemctl enable --now iscsid
