code review changes
Signed-off-by: Tomas Lamr <tomas@lamr.org>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -36,3 +36,4 @@ issues:
   - 'cyclomatic complexity 31 of func `verifyMigrateUID` is high'
   - 'cyclomatic complexity 31 of func `main` is high'
   - 'cyclomatic complexity 34 of func `\(\*provider\)\.getConfig` is high'
+  - 'cyclomatic complexity 31 of func `\(\*provider\)\.Validate` is high'
