--- a/.golangci.yml
+++ b/.golangci.yml
@@ -37,3 +37,4 @@ issues:
   - 'cyclomatic complexity 31 of func `main` is high'
   - 'cyclomatic complexity 34 of func `\(\*provider\)\.getConfig` is high'
   - 'cyclomatic complexity 31 of func `\(\*provider\)\.Validate` is high'
+  - 'cyclomatic complexity 31 of func `\(\*provider\)\.Create` is high'
