--- a/pkg/userdata/rhel/testdata/pod-cidr-azure-rhel.yaml
+++ b/pkg/userdata/rhel/testdata/pod-cidr-azure-rhel.yaml
@@ -175,6 +175,11 @@ write_files:
         chmod +x /opt/bin/health-monitor.sh
     fi
 
+    echo NETWORKING_IPV6=yes >> /etc/sysconfig/network
+    echo IPV6INIT=yes >> /etc/sysconfig/network-scripts/ifcfg-eth0
+    echo DHCPV6C=yes >> /etc/sysconfig/network-scripts/ifcfg-eth0
+    sudo ifdown eth0 && sudo ifup eth0
+
     # set kubelet nodeip environment variable
     mkdir -p /etc/systemd/system/kubelet.service.d/
     /opt/bin/setup_net_env.sh
