adapt for changing default interface names

--- a/pkg/userdata/rhel/testdata/kubelet-v1.23-vsphere-mirrors.yaml
+++ b/pkg/userdata/rhel/testdata/kubelet-v1.23-vsphere-mirrors.yaml
@@ -182,10 +182,11 @@ write_files:
         chmod +x /opt/bin/health-monitor.sh
     fi
 
+    DEFAULT_IFC_NAME=$(ip -o route get 1  | grep -oP "dev \K\S+")
     echo NETWORKING_IPV6=yes >> /etc/sysconfig/network
-    echo IPV6INIT=yes >> /etc/sysconfig/network-scripts/ifcfg-eth0
-    echo DHCPV6C=yes >> /etc/sysconfig/network-scripts/ifcfg-eth0
-    sudo ifdown eth0 && sudo ifup eth0
+    echo IPV6INIT=yes >> /etc/sysconfig/network-scripts/ifcfg-$DEFAULT_IFC_NAME
+    echo DHCPV6C=yes >> /etc/sysconfig/network-scripts/ifcfg-$DEFAULT_IFC_NAME
+    sudo ifdown eth0 && sudo ifup $DEFAULT_IFC_NAME
 
     # set kubelet nodeip environment variable
     mkdir -p /etc/systemd/system/kubelet.service.d/
