--- a/.golangci.yml
+++ b/.golangci.yml
@@ -30,6 +30,7 @@ linters:
     - noctx
     - nolintlint
     - nosprintfhostport
+    - predeclared
     - revive
     - structcheck
     - unconvert
