--- a/.golangci.yml
+++ b/.golangci.yml
@@ -31,6 +31,7 @@ linters:
     - nolintlint
     - nosprintfhostport
     - predeclared
+    - promlinter
     - revive
     - structcheck
     - unconvert
