--- a/.prow/provider-nutanix.yaml
+++ b/.prow/provider-nutanix.yaml
@@ -16,7 +16,8 @@ presubmits:
   - name: pull-machine-controller-e2e-nutanix
     optional: true
     always_run: false
-    run_if_changed: "(pkg/cloudprovider/provider/nutanix/)"
+    # TODO uncomment this when Nutanix is in a working condition
+    #run_if_changed: "(pkg/cloudprovider/provider/nutanix/)"
     decorate: true
     error_on_eviction: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
