--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -192,9 +192,9 @@ roleRef:
   kind: ClusterRole
   name: system:node-bootstrapper
 subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: Group
-  name: system:bootstrappers:machine-controller:default-node-token
+  - apiGroup: rbac.authorization.k8s.io
+    kind: Group
+    name: system:bootstrappers:machine-controller:default-node-token
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -207,9 +207,9 @@ roleRef:
   kind: ClusterRole
   name: system:certificates.k8s.io:certificatesigningrequests:nodeclient
 subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: Group
-  name: system:bootstrappers:machine-controller:default-node-token
+  - apiGroup: rbac.authorization.k8s.io
+    kind: Group
+    name: system:bootstrappers:machine-controller:default-node-token
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -248,7 +248,7 @@ spec:
             # controller re-creates them
             - -join-cluster-timeout=25m
           ports:
-          - containerPort: 8085
+            - containerPort: 8085
           livenessProbe:
             httpGet:
               path: /readyz
@@ -323,10 +323,10 @@ metadata:
   namespace: kube-system
 spec:
   ports:
-  - name: 443-9876
-    port: 443
-    protocol: TCP
-    targetPort: 9876
+    - name: 443-9876
+      port: 443
+      protocol: TCP
+      targetPort: 9876
   selector:
     app: machine-controller-webhook
   type: ClusterIP
@@ -347,36 +347,36 @@ metadata:
   labels:
     local-testing: "true"
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - secrets
-  - configmaps
-  verbs:
-  - create
-  - update
-  - list
-  - watch
-- apiGroups:
-  - ""
-  resources:
-  - endpoints
-  resourceNames:
-  - machine-controller
-  verbs:
-  - "*"
-- apiGroups:
-  - ""
-  resources:
-  - endpoints
-  verbs:
-  - create
-- apiGroups:
-  - "coordination.k8s.io"
-  resources:
-  - leases
-  verbs:
-  - "*"
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+      - configmaps
+    verbs:
+      - create
+      - update
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - endpoints
+    resourceNames:
+      - machine-controller
+    verbs:
+      - "*"
+  - apiGroups:
+      - ""
+    resources:
+      - endpoints
+    verbs:
+      - create
+  - apiGroups:
+      - "coordination.k8s.io"
+    resources:
+      - leases
+    verbs:
+      - "*"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -386,14 +386,14 @@ metadata:
   labels:
     local-testing: "true"
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - configmaps
-  verbs:
-  - get
-  - watch
-  - list
+  - apiGroups:
+      - ""
+    resources:
+      - configmaps
+    verbs:
+      - get
+      - watch
+      - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -403,14 +403,14 @@ metadata:
   labels:
     local-testing: "true"
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - endpoints
-  verbs:
-  - get
-  - watch
-  - list
+  - apiGroups:
+      - ""
+    resources:
+      - endpoints
+    verbs:
+      - get
+      - watch
+      - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -424,9 +424,9 @@ roleRef:
   kind: Role
   name: machine-controller
 subjects:
-- kind: ServiceAccount
-  name: machine-controller
-  namespace: kube-system
+  - kind: ServiceAccount
+    name: machine-controller
+    namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -440,9 +440,9 @@ roleRef:
   kind: Role
   name: machine-controller
 subjects:
-- kind: ServiceAccount
-  name: machine-controller
-  namespace: kube-system
+  - kind: ServiceAccount
+    name: machine-controller
+    namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -456,9 +456,9 @@ roleRef:
   kind: Role
   name: machine-controller
 subjects:
-- kind: ServiceAccount
-  name: machine-controller
-  namespace: kube-system
+  - kind: ServiceAccount
+    name: machine-controller
+    namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -467,114 +467,114 @@ metadata:
   labels:
     local-testing: "true"
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - "events"
-  verbs:
-  - "create"
-  - "patch"
-- apiGroups:
-  - "apiextensions.k8s.io"
-  resources:
-  - "customresourcedefinitions"
-  verbs:
-  - "create"
-  - "get"
-  - "list"
-  - "watch"
-- apiGroups:
-  - "apiextensions.k8s.io"
-  resources:
-  - "customresourcedefinitions"
-  resourceNames:
-  - "machines.machine.k8s.io"
-  verbs:
-  - "*"
-- apiGroups:
-  - "machine.k8s.io"
-  resources:
-  - "machines"
-  verbs:
-  - "*"
-- apiGroups:
-  - "cluster.k8s.io"
-  resources:
-  - "machines"
-  - "machinesets"
-  - "machinesets/status"
-  - "machinedeployments"
-  - "machinedeployments/status"
-  - "clusters"
-  - "clusters/status"
-  verbs:
-  - '*'
-- apiGroups:
-  - ""
-  resources:
-  - "nodes"
-  verbs:
-  - "*"
-# Pods are required for draining
-# PVs are required for vsphere to detach them prior to deleting the instance
-# Secrets and configmaps are needed for the bootstrap token creation and when a ref is used for a
-# value in the machineSpec
-- apiGroups:
-  - ""
-  resources:
-  - "pods"
-  verbs:
-  - "list"
-  - "get"
-- apiGroups:
-  - ""
-  resources:
-  - "persistentvolumes"
-  - "secrets"
-  - "configmaps"
-  verbs:
-  - "list"
-  - "get"
-  - "watch"
-# volumeAttachments permissions are needed by vsphere clusters
-- apiGroups:
-  - "storage.k8s.io"
-  resources:
-  - "volumeattachments"
-  verbs:
-  - "list"
-  - "get"
-  - "watch"
-- apiGroups:
-  - ""
-  resources:
-  - "pods/eviction"
-  verbs:
-  - "create"
-# The following roles are required for NodeCSRApprover controller to be able
-# to reconcile CertificateSigningRequests for kubelet serving certificates.
-- apiGroups:
-  - "certificates.k8s.io"
-  resources:
-  - "certificatesigningrequests"
-  verbs:
-  - "get"
-  - "list"
-  - "watch"
-- apiGroups:
-  - "certificates.k8s.io"
-  resources:
-  - "certificatesigningrequests/approval"
-  verbs:
-  - "update"
-- apiGroups:
-  - "certificates.k8s.io"
-  resources:
-  - "signers"
-  resourceNames:
-  - "kubernetes.io/kubelet-serving"
-  verbs:
-  - "approve"
+  - apiGroups:
+      - ""
+    resources:
+      - "events"
+    verbs:
+      - "create"
+      - "patch"
+  - apiGroups:
+      - "apiextensions.k8s.io"
+    resources:
+      - "customresourcedefinitions"
+    verbs:
+      - "create"
+      - "get"
+      - "list"
+      - "watch"
+  - apiGroups:
+      - "apiextensions.k8s.io"
+    resources:
+      - "customresourcedefinitions"
+    resourceNames:
+      - "machines.machine.k8s.io"
+    verbs:
+      - "*"
+  - apiGroups:
+      - "machine.k8s.io"
+    resources:
+      - "machines"
+    verbs:
+      - "*"
+  - apiGroups:
+      - "cluster.k8s.io"
+    resources:
+      - "machines"
+      - "machinesets"
+      - "machinesets/status"
+      - "machinedeployments"
+      - "machinedeployments/status"
+      - "clusters"
+      - "clusters/status"
+    verbs:
+      - "*"
+  - apiGroups:
+      - ""
+    resources:
+      - "nodes"
+    verbs:
+      - "*"
+  # Pods are required for draining
+  # PVs are required for vsphere to detach them prior to deleting the instance
+  # Secrets and configmaps are needed for the bootstrap token creation and when a ref is used for a
+  # value in the machineSpec
+  - apiGroups:
+      - ""
+    resources:
+      - "pods"
+    verbs:
+      - "list"
+      - "get"
+  - apiGroups:
+      - ""
+    resources:
+      - "persistentvolumes"
+      - "secrets"
+      - "configmaps"
+    verbs:
+      - "list"
+      - "get"
+      - "watch"
+  # volumeAttachments permissions are needed by vsphere clusters
+  - apiGroups:
+      - "storage.k8s.io"
+    resources:
+      - "volumeattachments"
+    verbs:
+      - "list"
+      - "get"
+      - "watch"
+  - apiGroups:
+      - ""
+    resources:
+      - "pods/eviction"
+    verbs:
+      - "create"
+  # The following roles are required for NodeCSRApprover controller to be able
+  # to reconcile CertificateSigningRequests for kubelet serving certificates.
+  - apiGroups:
+      - "certificates.k8s.io"
+    resources:
+      - "certificatesigningrequests"
+    verbs:
+      - "get"
+      - "list"
+      - "watch"
+  - apiGroups:
+      - "certificates.k8s.io"
+    resources:
+      - "certificatesigningrequests/approval"
+    verbs:
+      - "update"
+  - apiGroups:
+      - "certificates.k8s.io"
+    resources:
+      - "signers"
+    resourceNames:
+      - "kubernetes.io/kubelet-serving"
+    verbs:
+      - "approve"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -591,48 +591,48 @@ subjects:
     name: machine-controller
     namespace: kube-system
 ---
-apiVersion: admissionregistration.k8s.io/v1
-kind: MutatingWebhookConfiguration
-metadata:
-  name: machinedeployments.machine-controller.kubermatic.io
-webhooks:
-- name: machinedeployments.machine-controller.kubermatic.io
-  failurePolicy: Fail
-  sideEffects: None
-  admissionReviewVersions: ["v1", "v1beta1"]
-  rules:
-  - apiGroups:
-    - "cluster.k8s.io"
-    apiVersions:
-    - v1alpha1
-    operations:
-    - CREATE
-    - UPDATE
-    resources:
-    - machinedeployments
-  clientConfig:
-    service:
-      namespace: kube-system
-      name: machine-controller-webhook
-      path: /machinedeployments
-    caBundle: __admission_ca_cert__
-- name: machines.machine-controller.kubermatic.io
-  failurePolicy: Fail
-  sideEffects: None
-  admissionReviewVersions: ["v1", "v1beta1"]
-  rules:
-  - apiGroups:
-    - "cluster.k8s.io"
-    apiVersions:
-    - v1alpha1
-    operations:
-    - CREATE
-    - UPDATE
-    resources:
-    - machines
-  clientConfig:
-    service:
-      namespace: kube-system
-      name: machine-controller-webhook
-      path: /machines
-    caBundle: __admission_ca_cert__
+# apiVersion: admissionregistration.k8s.io/v1
+# kind: MutatingWebhookConfiguration
+# metadata:
+#   name: machinedeployments.machine-controller.kubermatic.io
+# webhooks:
+# - name: machinedeployments.machine-controller.kubermatic.io
+#   failurePolicy: Fail
+#   sideEffects: None
+#   admissionReviewVersions: ["v1", "v1beta1"]
+#   rules:
+#   - apiGroups:
+#     - "cluster.k8s.io"
+#     apiVersions:
+#     - v1alpha1
+#     operations:
+#     - CREATE
+#     - UPDATE
+#     resources:
+#     - machinedeployments
+#   clientConfig:
+#     service:
+#       namespace: kube-system
+#       name: machine-controller-webhook
+#       path: /machinedeployments
+#     caBundle: __admission_ca_cert__
+# - name: machines.machine-controller.kubermatic.io
+#   failurePolicy: Fail
+#   sideEffects: None
+#   admissionReviewVersions: ["v1", "v1beta1"]
+#   rules:
+#   - apiGroups:
+#     - "cluster.k8s.io"
+#     apiVersions:
+#     - v1alpha1
+#     operations:
+#     - CREATE
+#     - UPDATE
+#     resources:
+#     - machines
+#   clientConfig:
+#     service:
+#       namespace: kube-system
+#       name: machine-controller-webhook
+#       path: /machines
+#     caBundle: __admission_ca_cert__
