--- a/pkg/userdata/rockylinux/testdata/kubelet-v1.21-vsphere.yaml
+++ b/pkg/userdata/rockylinux/testdata/kubelet-v1.21-vsphere.yaml
@@ -182,6 +182,7 @@ write_files:
     systemctl enable --now vmtoolsd.service
     systemctl enable --now kubelet
     systemctl enable --now --no-block kubelet-healthcheck.service
+	systemctl disable setup.service
 
 - path: "/opt/bin/supervise.sh"
   permissions: "0755"
@@ -445,4 +446,4 @@ write_files:
 
 
 runcmd:
-- systemctl start setup.service
+- systemctl enable --now setup.service
